SubDirList(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

list(REMOVE_ITEM SUBDIRS python)
if (NOT ENABLE_PYTHON_BINDINGS)
    list(REMOVE_ITEM SUBDIRS PyAutonomy)
endif()

if (NOT GRPC_FOUND)
    list(REMOVE_ITEM SUBDIRS ExternalControl)
    list(REMOVE_ITEM SUBDIRS TutorialOpenAIAutonomy)
endif()

FOREACH(subdir ${SUBDIRS})
  ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()

set(PROJECT_PLUGINS ${PROJECT_PLUGINS} PARENT_SCOPE)
