ADD_SUBDIRECTORY(AircraftPIDController)
# ADD_SUBDIRECTORY(AircraftToSingleIntegratorController)
ADD_SUBDIRECTORY(DirectController)
ADD_SUBDIRECTORY(DoubleIntegratorControllerVelYaw)
ADD_SUBDIRECTORY(DoubleIntegratorControllerWaypoint)
ADD_SUBDIRECTORY(FixedWing6DOFControllerPID)
ADD_SUBDIRECTORY(FixedWing6DOFControllerROS)
ADD_SUBDIRECTORY(HarmonicOscillatorConstController)
ADD_SUBDIRECTORY(JoystickController)
ADD_SUBDIRECTORY(MotionBattery)
ADD_SUBDIRECTORY(MultirotorControllerOmega)
ADD_SUBDIRECTORY(MultirotorControllerPID)
ADD_SUBDIRECTORY(RigidBody6DOFControllerPID)
ADD_SUBDIRECTORY(RigidBody6DOFControllerROS)
ADD_SUBDIRECTORY(SimpleAircraftControllerPID)
ADD_SUBDIRECTORY(SimpleCarControllerHeading)
ADD_SUBDIRECTORY(SimpleQuadrotorControllerLQR)
ADD_SUBDIRECTORY(SingleIntegratorControllerSimple)
ADD_SUBDIRECTORY(SingleIntegratorControllerWaypoint)
ADD_SUBDIRECTORY(UUV6DOFLinearEnergy)
ADD_SUBDIRECTORY(UUV6DOFPIDController)
ADD_SUBDIRECTORY(UnicycleControllerPoint)
ADD_SUBDIRECTORY(UnicyclePID)

if (JSBSIM_FOUND)
  ADD_SUBDIRECTORY(JSBSimModelControllerHeadingPID)
  ADD_SUBDIRECTORY(JSBSimModelControllerDirect)
  ADD_SUBDIRECTORY(JSBSimControlControllerHeadingPID)
endif()

set(PROJECT_PLUGINS ${PROJECT_PLUGINS} PARENT_SCOPE)
