ADD_SUBDIRECTORY(Ballistic)
ADD_SUBDIRECTORY(DoubleIntegrator)
ADD_SUBDIRECTORY(DubinsAirplane)
ADD_SUBDIRECTORY(DubinsAirplane3D)
ADD_SUBDIRECTORY(FixedWing6DOF)
ADD_SUBDIRECTORY(HarmonicOscillator)
ADD_SUBDIRECTORY(Multirotor)
ADD_SUBDIRECTORY(RigidBody6DOF)
ADD_SUBDIRECTORY(SimpleAircraft)
ADD_SUBDIRECTORY(SimpleCar)
ADD_SUBDIRECTORY(SimpleQuadrotor)
ADD_SUBDIRECTORY(SingleIntegrator)
ADD_SUBDIRECTORY(UUV6DOF)
ADD_SUBDIRECTORY(Unicycle)
ADD_SUBDIRECTORY(Unicycle3D)
if (FOUND_JSBSIM)
  ADD_SUBDIRECTORY(JSBSimControl)
  ADD_SUBDIRECTORY(JSBSimModel)
endif()


set(PROJECT_PLUGINS ${PROJECT_PLUGINS} PARENT_SCOPE)
